--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.4.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0"
   }
 }
