--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8080
 MONGO_URL_SESSION=mongodb+srv://mverblud:5hThdzKSJwfC3baO@mverblud.pawqn.mongodb.net/sessionMongoAtlas?retryWrites=true&w=majority
 MONGO_DB=mongodb+srv://mverblud:5hThdzKSJwfC3baO@mverblud.pawqn.mongodb.net/coderSession?retryWrites=true&w=majority
+NODE_ENV= 'PROD'
